--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+} */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
+:root {
+  --surface: #fff;
+  --bg: #000000;
+  --text: #71717a;
+  --shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  --inset: inset 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.15);
 }
 
 body {
   font-family: "Nunito", sans-serif;
-  background: #f8f8f8;
+  /* background: #f8f8f8; */
 }
 
 .input {
@@ -16,7 +25,7 @@ body {
 
 input[type="submit"] {
   padding: 15px 30px;
-  background: #e7e7e7;
+  color: var(--text);
   border: none;
   border-radius: 1px;
   font-family: "Nunito", sans-serif;
@@ -28,7 +37,7 @@ input[type="submit"] {
   width: 600px;
   height: 55px;
   padding: 5px 10px;
-  background: #e7e7e7;
+  color: var(--text);
   border: none;
   border-radius: 1px;
   font-family: "Nunito", sans-serif;
@@ -38,7 +47,7 @@ input[type="submit"] {
 
 .card {
   width: 50%;
-  background: #e7e7e7;
+  color: var(--text);
   height: 40vh;
   margin: 50px auto;
   border-radius: 2px;
@@ -60,4 +69,62 @@ input[type="submit"] {
   text-align: center;
   margin: 40px 0;
   font-size: 20px;
+}
+
+.toggle-theme {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  position: relative;
+  height: 50px;
+  width: 300px;
+}
+
+.toggle-theme input {
+  position: absolute;
+  height: 0;
+  width: 0;
+  opacity: 0;
+}
+
+.switch {
+  position: absolute;
+  content: " ";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--bg);
+  box-shadow: var(--inset);
+  border-radius: 50px;
+  transition: background-color 0.15s ease-in 0.4s, box-shadow 0.15s ease-in 0.4s;
+  user-select: none;
+  cursor: pointer;
+}
+
+.switch:before {
+  position: absolute;
+  content: "";
+  height: 40px;
+  width: 145px;
+  top: 5px;
+  left: 5px;
+  background-color: var(--surface);
+  box-shadow: var(--shadow);
+  border-radius: 40px;
+  transition: transform 0.3s, background-color 0.15s ease-in 0.4s,
+    box-shadow 0.15s ease-in 0.4s;
+}
+
+input:checked + .switch:before {
+  transform: translateX(145px);
+}
+
+.toggle-theme p {
+  font-family: "Montserrat", sans-serif;
+  color: var(--text);
+  transition: color 0.15s ease-in 0.4s;
+  cursor: pointer;
+  z-index: 1;
 }
